Thu Apr 14 23:35:57 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* ace/Timeprobe.h:

	  Include "ace/Null_Mutex.h" to pull in complete ACE_Null_Mutex
	  type.  Fixes "incomplete type" errors.

	* ace/config-g++-common.h (ACE_EXPORT_SINGLETON_DECLARATION):
	  (ACE_EXPORT_SINGLETON_DECLARE):

	  Define these macros to a suitable C++ expression.  Addresses
	  syntax errors.

Fri Apr 15 07:57:38 2005  Olli Savia  <ops@iki.fi>

        * ace/Ping_Socket.cpp:
          Replaced NULL with 0.

Fri Apr 15 07:39:20 2005  Olli Savia  <ops@iki.fi>

        * ace/OS.inl:
          Fixed typo in comment.

        * ace/config-integritySCA.h:
          Removed ACE_HAS_SYSENT_H definition. It is no longer
          used in ACE/TAO code.

Fri Apr 15 07:27:38 2005  Olli Savia  <ops@iki.fi>

        * ace/README:
          Removed ACE_HAS_BROKEN_ENUMS. It is no longer used in ACE/TAO code.

        * ace/config-fsu-pthread.h:
        * ace/config-mit-pthread.h:
        * ace/config-sco-5.0.0-mit-pthread.h:
          Removed ACE_HAS_PTHREAD_ATTR_INIT, ACE_HAS_PTHREAD_ATTR_DESTROY and
          ACE_HAS_PTHREAD_YIELD_VOID_PTR definitions. These are no longer
          used in ACE/TAO code.

Fri Apr 15 07:19:20 2005  Olli Savia  <ops@iki.fi>

        * ace/Handle_Set.cpp:
        * ace/README:
        * m4/config_h.m4:
          Removed references to ACE_HAS_BROKEN_BITSHIFT. It is no longer
          needed.

Thu Apr 14 17:12:44 2005  Steve Huston  <shuston@riverace.com>

        * configure.ac: Corrected the variable used to tell whether or not
          to check for ACE_HAS_XPG4_MULTIBYTE_CHAR. Fixes configure on Solaris.

        * ace/Service_Config.h: #include "ace/SString.h" instead of
          "ace/SStringfwd.h" to make sure everything needed for explicit
          template instantiation is present.

Thu Apr 14 15:25:31 2005  Steve Huston  <shuston@riverace.com>

        * NEWS: Added a note that the reactor change: